# CodeFuzz

./: .gitignore  CMakeLists.txt  README.md
include/CodeFuzz/: ast.h  ast.hpp  bytes.h  bytestream.hpp
src/: CMakeLists.txt  ast.cpp  bytes.cpp  bytestream.cpp
tests/: CMakeLists.txt
